fixed alignment of randomize button

--- a/client-react/src/lobby/Lobby.less
+++ b/client-react/src/lobby/Lobby.less
@@ -104,7 +104,8 @@
       height: 40px;
       width: 400px;
 
-      &.ready-button {
+      &.ready-button,
+      &.randomize-button {
         margin-left: 40px;
       }
     }
